Fixed center column spacing and bottom margin for cat ceo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,6 +63,7 @@ div {
 
 .column.large {
   width: 630px;
+  flex-grow: 3;
 }
 
 .main-story .image-content {
@@ -116,15 +117,19 @@ div {
 
 .cat-ceo.image-content {
   background-image: url("../images/img-story-1.png");
+  margin-bottom: 20px;
 }
 
 .column.medium {
   width: 300px;
+  flex-grow: 2;
+  align-items: center;
 }
 
 .column.small  {
   width: 240px;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 
